--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 body {
   font-family: Work Sans;
   text-align: center;
+  /* background-color: lightgray; */
   background-color: lightgray;
 
+}
+
+.content{
+  /* color: rgb(33, 127, 198); */
+  
 }
 
 .navbar, .navbar-brand {
